--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.8",
-    "postcss": "^8.1.9",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
     "postcss-loader": "^4.1.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "^3.1.4"
   }
 }
